# srch2-ngn

./: .exportvars  CMakeLists.txt  build-android.sh
android_prerequisite/: README.md  build_android.sh  install_sdk_ndk.sh  setup_android_env.sh
src/adapter/: CMakeLists.txt
src/core/: CMakeLists.txt
src/core/highlighter/: Highlighter.cpp
src/java/: CMakeLists.txt
